--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.2.1",
     "@react-google-maps/api": "^2.19.2",
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
