--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:deploy": "env-cmd -f .env npm run build && firebase deploy -P ccny-shuttle-a35ec"
   },
   "dependencies": {
     "@mapbox/polyline": "^1.2.1",
     "@react-google-maps/api": "^2.19.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
@@ -23,6 +25,7 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
