--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
