--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
+    "lucide-react": "^0.363.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
