--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -39,6 +39,6 @@ jobs:
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: deploy -P ccny-shuttle-a35ec
+          run: deploy -P ccny-shuttle-a35ec
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
