--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,7 +20,7 @@ jobs:
           CI: false        
         run: npm run build
       - name: Archive Production Artifact
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@2
         with:
           name: dist
           path: dist
@@ -30,12 +30,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@master
+        uses: actions/checkout@2
       - name: Download Artifact
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@2
         with:
           name: dist
           path: dist
+      - name: Install Firebase Tools
+        run: npm install -g firebase-tools
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@v13.5.2
         with:
