--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -38,6 +38,8 @@ jobs:
           path: dist
       - name: Install Firebase Tools
         run: npm install -g firebase-tools
+      - name: Install Firebase Functions Dependencies
+        run: npm install --prefix functions firebase-functions
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@v13.5.2
         with:
