--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,46 +11,41 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout code
+      - name: Checkout Repo
         uses: actions/checkout@v4
+        
+      - name: Install Dependencies
+        run: npm install      
+        
+      - name: Build       
+        run: npm run build
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Archive Production Artifact
+        uses: actions/upload-artifact@v2
         with:
-          node-version: '14'
-
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
-
-      - name: Authenticate with Firebase
-        run: firebase login:ci
+          name: dist
+          path: dist
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+  
+      - name: Download Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
+        
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@v13.5.2
+        with:
+          args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-
-      - name: Deploy to Firebase Hosting
-        run: firebase deploy --only hosting 
-# jobs:
-#   build:
-#     name: Build
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout Repo
-#         uses: actions/checkout@v4
-#       - name: Install Dependencies
-#         run: npm install      
-#       - name: Build
-#         env:
-#           CI: false        
-#         run: npm run build
-#       - name: Checkout Repo
-#         uses: actions/checkout@v4
-#       - name: Deploy to Firebase
-#         uses: w9jds/firebase-action@v13.5.2
-#         with:
-#           args: deploy -P ccny-shuttle-a35ec
-#         env:
-#           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
 
