--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: dist
-          path: /dist
+          path: ./dist
   deploy:
     name: Deploy
     needs: build
@@ -39,7 +39,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: dist
-          path: /dist
+          path: ./dist
         
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@v13.5.2
