--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,22 +6,19 @@ on:
   push:
     branches:
       - main
-
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
-        
       - name: Install Dependencies
         run: npm install      
-        
-      - name: Build       
+      - name: Build
+        env:
+          CI: false        
         run: npm run build
-
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v2
         with:
@@ -33,18 +30,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v4
-  
+        uses: actions/checkout@v2
       - name: Download Artifact
         uses: actions/download-artifact@v2
         with:
           name: dist
           path: dist
-        
+      - name: Install Firebase Tools
+        run: npm install -g firebase-tools
+      - name: Install Firebase Functions Dependencies
+        run: npm install --prefix functions firebase-functions
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@v13.5.2
         with:
-          args: deploy --only hosting
+          args: deploy -P ccny-shuttle-a35ec
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
           VITE_APP_FIREBASE_API_KEY: ${{ secrets.VITE_APP_FIREBASE_API_KEY }}
