--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
+      - name: Create env file
+        run: |
+          echo "${{ secrets.ENV_FILE }}" > .env
       - name: Install Dependencies
         run: npm install      
       - name: Build
