--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,22 +6,26 @@ on:
   push:
     branches:
       - main
+
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
+        
       - name: Create env file
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env
+        
       - name: Install Dependencies
         run: npm install      
-      - name: Build
-        env:
-          CI: false        
+        
+      - name: Build       
         run: npm run build
+
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v2
         with:
@@ -33,20 +37,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+  
       - name: Download Artifact
         uses: actions/download-artifact@v2
         with:
           name: dist
           path: dist
+
       - name: Install Firebase Tools
         run: npm install -g firebase-tools
-      - name: Install Firebase Functions Dependencies
-        run: npm install --prefix functions firebase-functions
+      
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@v13.5.2
         with:
-          args: deploy -P ccny-shuttle-a35ec
+          args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
           VITE_APP_FIREBASE_API_KEY: ${{ secrets.VITE_APP_FIREBASE_API_KEY }}
@@ -55,4 +60,3 @@ jobs:
           VITE_APP_FIREBASE_PROJECT_ID: ${{ secrets.VITE_APP_FIREBASE_PROJECT_ID }}
           VITE_APP_FIREBASE_STORAGE_BUCKET: ${{ secrets.VITE_APP_FIREBASE_STORAGE_BUCKET }}
           VITE_APP_FIREBASE_MSG_SENDER_ID: ${{ secrets.VITE_APP_FIREBASE_MSG_SENDER_ID }}
-
