--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -1,4 +1,3 @@
-
 name: Deploy to Firebase Hosting
 
 on:
@@ -10,18 +9,27 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Setup Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
-        node-version: '14' 
+        node-version: '18.x' 
 
     - name: Install Dependencies
       run: npm install
 
     - name: Build
-      run: env-cmd -f .env npm run build
+      run: npm run build
+      env:
+        VITE_APP_FIREBASE_API_KEY: ${{ secrets.VITE_APP_FIREBASE_API_KEY }}
+        VITE_APP_FIREBASE_APP_ID: ${{ secrets.VITE_APP_FIREBASE_APP_ID }}
+        VITE_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_APP_FIREBASE_AUTH_DOMAIN }}
+        VITE_APP_FIREBASE_PROJECT_ID: ${{ secrets.VITE_APP_FIREBASE_PROJECT_ID }}
+        VITE_APP_FIREBASE_STORAGE_BUCKET: ${{ secrets.VITE_APP_FIREBASE_STORAGE_BUCKET }}
+        VITE_APP_FIREBASE_MSG_SENDER_ID: ${{ secrets.VITE_APP_FIREBASE_MSG_SENDER_ID }}
+        VITE_APP_FIREBASE_MEASUREMENT_ID: $ {{ secrets.VITE_APP_FIREBASE_MEASUREMENT_ID }}
+       
 
     - name: Deploy to Firebase
       uses: w9jds/firebase-action@master
